aws-eks/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: server
    spec:
      volumes: 
        - name: nginx
          configMap:
            name: nginx-conf
      containers:
      - image: 395206648811.dkr.ecr.us-east-1.amazonaws.com/node:4.0
      #gitlab.sweetbeam.net:5050/hdehbini/guest-web-v2/server:dev-038e2388eb972d87bf845593dc9b967332ae80b2
        name: server
        resources: {}
        ports:
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443
        volumeMounts: 
          - name: nginx
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: php
  name: php
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: php
    spec:
      imagePullSecrets:
        - name: repo-access
      containers:
      - image: gitlab.sweetbeam.net:5050/hdehbini/guest-web-v2/api:dev-68227b0fb8d3f99c9a5c0c86af601ed6567d9902
      #gitlab.sweetbeam.net:5050/hdehbini/guest-web-v2/api:dev-038e2388eb972d87bf845593dc9b967332ae80b2
        name: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: client
    env: dev
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
      env: dev
  template:
    metadata:
      labels:
        app: client
        env: dev
    spec:
      imagePullSecrets:
        - name: repo-access
      containers:
      - image: gitlab.sweetbeam.net:5050/hdehbini/guest-web-v2/client:dev-68227b0fb8d3f99c9a5c0c86af601ed6567d9902
      #gitlab.sweetbeam.net:5050/hdehbini/guest-web-v2/client:dev-038e2388eb972d87bf845593dc9b967332ae80b2
        #gitlab.sweetbeam.net:5050/hdehbini/guest-web-v2/client:v1.0.19
        name: client
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: server
  name: server
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: server
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: php
  name: php
spec:
  ports:
  - port: 9000
    protocol: TCP
  selector:
    app: php
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: client
    env: dev
  name: client
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: client
    env: dev
